Практическое применение Docker

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,10 +1,10 @@
-/haproxy
-/nginx
-.gitignore
-compose.yaml
-init.sh
-LICENCE
-proxy.yaml
-schema.pdf
-README.md
-.dockerignore
+haproxy
+nginx
+db_data
+screenshots
+*.md
+.*
+*.pdf
+Dockerfile.python
+LICENSE
+*.yaml
