--- a/compose.yaml
+++ b/compose.yaml
@@ -2,26 +2,42 @@ version: '3.8'
 include:
   - proxy.yaml
 services:
-  db:
-    image: mysql:8
-    restart: always
-    networks:
-      backend:
-        ipv4_address: 172.20.0.10
+  web:
+    build:
+      context: .
+      dockerfile: Dockerfile.python
+    environment:
+      - DB_HOST=db
+      - DB_USER=${MYSQL_USER}
+      - DB_PASSWORD=${MYSQL_PASSWORD}
+      - DB_NAME=${MYSQL_DATABASE}
     env_file:
       - .env
-    volumes:
-      - ./data:/var/lib/mysql
-
-  web:
-    depends_on: ["db"]
-    build: .
     restart: always
     networks:
       backend:
         ipv4_address: 172.20.0.5
+    depends_on:
+      - db
+
+  db:
+    image: mysql:8
     environment:
-      - DB_HOST=172.20.0.10
-      - DB_USER=app
-      - DB_PASSWORD=QwErTy1234
-      - DB_NAME=virtd
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+      - MYSQL_DATABASE=${MYSQL_DATABASE}
+      - MYSQL_USER=${MYSQL_USER}
+      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
+    env_file:
+      - .env
+    restart: always
+    networks:
+      backend:
+        ipv4_address: 172.20.0.10
+
+
+networks:
+  backend:
+    driver: bridge
+    ipam:
+      config:
+        - subnet: 172.20.0.0/24
